--- a/src/com/im_plus/db/mySql.properties
+++ b/src/com/im_plus/db/mySql.properties
@@ -1,5 +1,5 @@
 url=jdbc:mysql://localhost:3306/
-driver=com.mysql.jdbc.Driver
+driver=com.mysql.cj.jdbc.Driver
 database=im_plus_db
 username=root
 password=123456
